syntax = "proto3";
option go_package = "github.com/Salladin95/card-quizzler-microservices/auth-service/auth";

message SignInPayload {
  string email = 1;
  string password = 2;
}

message SignUpPayload {
  string email = 1;
  string password = 2;
  string name = 3;
  string birthday = 4;
}

message SignInRequest {
  SignInPayload payload = 1;
}

message SignInResponse {
  string message = 1;
}

message SignUpRequest {
  SignUpPayload payload = 1;
}

message SignUpResponse {
  string message = 1;
}

service Auth {
  rpc SignIn(SignInRequest) returns(SignInResponse);
  rpc SignUp(SignUpRequest) returns(SignUpResponse);
}
